Updated test environment.
Now we can terminate the simulation, trace
certain values and even schedule interrupts
and NMIs into the future right from the instruction
stream.

--- a/sim/Makefile
+++ b/sim/Makefile
@@ -2,7 +2,7 @@ GHDL=ghdl
 GHDLFLAGS= -fsynopsys -fexplicit --std=08 -O2
 GHDLRUNFLAGS=
 
-PROGRAM = ldi_flags_test
+PROGRAM = ldir_irq_test
 
 # Default target : elaborate
 all: run
